paths/virtualservice-paths.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logger
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway
  http:
  - match:
    - uri:
        exact: /colors
    rewrite:
      uri: /
    route:
    - destination:
        host: colors
  - route:
    - destination:
        host: logger-frontend
